--- a/index.html
+++ b/index.html
@@ -143,6 +143,29 @@
         </div>
       </div>
     </div>
+    <div class="paginat">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link text-bg-warning" href="#"> « </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link text-bg-warning" href="#">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link text-bg-warning" href="#">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link text-bg-warning" href="#">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link text-bg-warning" href="#"> » </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="cicle"></div>
     <footer>
       <div class="footer__block">
         <ul>
